[package]
name = "hobo_os"
version = "0.1.0"
edition = "2021"

# [build]
# target = "riscv64gc-unknown-none-elf"
# rustflags = ['-Clink-arg=-Tsrc/lds/virt.lds']

# [features]
# use_lds = []

# [target.riscv64gc-unknown-none-elf]
# runner = "qemu-system-riscv64 -machine virt -cpu rv64 -smp 4 -m 128M -drive if=none,format=raw,file=hdd.dsk,id=attic -device virtio-blk-device,scsi=off,drive=attic -nographic -serial mon:stdio -bios none -device virtio-rng-device -device virtio-gpu-device -device virtio-net-device -device virtio-tablet-device -device virtio-keyboard-device -kernel "	


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# disable unwinding after a panic. Let the program just abort if panic happens
[profile.dev]
panic="abort"

[profile.release]
panic="abort"


[dependencies]
