[package]
name = "hobo_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["rlib"]

[profile.release]
panic = "abort"
debug = true


[profile.dev]
panic = "abort"
debug = true

[dependencies]
volatile-register = "0.2.1"
